--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <input type="msg" name="msg" id="msg" >
             </div>
 
-            <input type="submit" value="Envoyer">
+            <input id="send" type="submit" value="Envoyer">
         </form>
     </main>
 
